--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Crystal Meilisearch Client Tests
 
 on:
   push:
-    branches: [main]
+    branches: [main, add-ci]
   pull_request:
     branches: [main]
 
