--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,6 @@ jobs:
       run: shards install
 
     - name: Run tests
-      run: crystal spec --verbose
+      run: crystal spec --verbose --no-color
       env:
         MEILISEARCH_API_KEY: X30-IR0dDR_Hln8XYQI_SpAVtDtu0NIrCH8EeGKrSsQ
